Bug 13789 - ctdb_version.h is not always rebuilt when required
Summary: ctdb_version.h is not always rebuilt when required
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: CTDB (show other bugs)
Version: 4.10.0rc2
Hardware: All All
: P5 regression (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-17 11:07 UTC by Martin Schwenke
Modified: 2019-03-28 08:07 UTC (History)
2 users (show)

See Also:


Attachments
A patch I found again today... (2.39 KB, patch)
2019-02-18 23:31 UTC, Stefan Metzmacher
no flags Details
Patch for 4.10 (8.91 KB, patch)
2019-03-19 03:43 UTC, Martin Schwenke
amitay: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Schwenke 2019-02-17 11:07:08 UTC
Some changes in version file generation mean that ctdb_version.h is not necessarily re-generated when the version is changed (e.g. when changing branches).
Comment 1 Stefan Metzmacher 2019-02-18 23:31:04 UTC
Created attachment 14851 [details]
A patch I found again today...

The only problem with this is that versions from bin/ctdb don't work together
with installed binaries, which is bad!
Comment 2 Martin Schwenke 2019-02-20 03:09:15 UTC
Hi Metze,

That looks nice and simple.  I think it needs this squashed in:

diff --git a/ctdb/include/ctdb_version.h b/ctdb/include/ctdb_version.h
index 6558974f003..cf27179aff8 100644
--- a/ctdb/include/ctdb_version.h
+++ b/ctdb/include/ctdb_version.h
@@ -1,3 +1,3 @@
 #include "version.h"
 
-#define CTDB_VERSION_STRING SAMBA_VERSION_DOT_STRING
+#define CTDB_VERSION_STRING SAMBA_VERSION_STRING

I'm just wondering why you say that versions from bin/ctdb don't work together with installed binaries?
Comment 3 Martin Schwenke 2019-03-19 03:43:08 UTC
Created attachment 14936 [details]
Patch for 4.10
Comment 4 Amitay Isaacs 2019-03-19 23:14:40 UTC
Hi Karolin,

This is ready for v4-10.
Comment 5 Karolin Seeger 2019-03-21 12:07:38 UTC
(In reply to Amitay Isaacs from comment #4)
Pushed to autobuild-v4-10-test.
Comment 6 Karolin Seeger 2019-03-28 08:07:22 UTC
(In reply to Karolin Seeger from comment #5)
Pushed to v4-10-test.
Closing out bug report.

Thanks!