ctdb/include/ctdb_version.h
@@ -1,0 +1,3 @@
+#include "version.h"
+
+#define CTDB_VERSION_STRING SAMBA_VERSION_STRING
